Prashant Revised 01/06/2017 - Revision to UI

--- a/Invessence/modules/web/src/main/webapp/message.xhtml
+++ b/Invessence/modules/web/src/main/webapp/message.xhtml
@@ -22,7 +22,7 @@
                         style="margin-top: 5%;">
                     <div class="Container90 Fnone MarAuto TexAlCenter">
 
-                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+                        <h:graphicImage id="logo" name="#{uiLayout.webProfile.logo}"
                                         styleClass="Fleft" library="invessence" class="MarAuto MarTop20"
                                         style="height: 50px" />
                         <div class="EmptyBox20"></div>
