--- a/Invessence/modules/web/src/main/webapp/pages/consumer/inv/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/inv/cadd.xhtml
@@ -12,7 +12,7 @@
 </f:metadata>
 
 <ui:define name="content">
-<h:outputScript name="js/invCharts.js" library="#{uiLayout.cssDIR}"/>
+<h:outputScript name="js/invCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
 
 <!-- BOX START -->
 <h:form id="ceForm">
