--- a/Invessence/modules/web/src/main/webapp/setPassword.xhtml
+++ b/Invessence/modules/web/src/main/webapp/setPassword.xhtml
@@ -23,7 +23,7 @@
                         <p:panel id="p1" styleClass="Container100 PwdReset0" style="border: 0px; background: transparent">
                         
                              <div class="Container100 TexAlCenter">
-                                    <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+                                    <h:graphicImage id="logo" name="#{uiLayout.webProfile.logo}"
                                                     styleClass="" library="invessence" class="MarAuto"
                                                     style="height: 50px"/>
                                 </div>
