--- a/Invessence/modules/web/src/main/webapp/signup.xhtml
+++ b/Invessence/modules/web/src/main/webapp/signup.xhtml
@@ -30,7 +30,7 @@
                                      styleClass="Container100 Responsive100 SignupBlock0"
                                      style="background-color: transparent!important; border: 0px">
                                 <div class="Container100 TexAlCenter">
-                                    <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+                                    <h:graphicImage id="logo" name="#{uiLayout.webProfile.logo}"
                                                     styleClass="" library="invessence" class="MarAuto MarTop20"
                                                     style="height: 50px"/>
                                 </div>
