--- a/Invessence/modules/web/src/main/webapp/getstarted.xhtml
+++ b/Invessence/modules/web/src/main/webapp/getstarted.xhtml
@@ -7,12 +7,12 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
+<f:metadata>
+    <f:event listener="#{uiLayout.preRenderView}" type="preRenderView" />
+</f:metadata>
+
 <h:head>
 </h:head>
-<f:metadata>
-    <f:viewParam name="advisor" value="#{webutil.uiprofile.advisor}"/>
-    <f:viewParam name="rep" value="#{webutil.uiprofile.rep}"/>
-</f:metadata>
 
 <h:body>
     <h:outputText value="#{sessionControl.atStart}" style="display: none;"/>
