--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd.xhtml
@@ -12,13 +12,13 @@
     </f:metadata>
 
         <ui:define name="content">
-        <h:outputScript name="js/invCharts.js" library="#{uiLayout.cssDIR}"/>
+        <h:outputScript name="js/invCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
 
         <!-- HighChart .js plugin Start -->
-        <h:outputScript name="js/highcharts.js" library="#{uiLayout.cssDIR}"/>
-        <h:outputScript name="js/highcharts-3d.js" library="#{uiLayout.cssDIR}"/>
-        <h:outputScript name="js/highcharts-more.js" library="#{uiLayout.cssDIR}"/>
-        <h:outputScript name="js/exporting.js" library="#{uiLayout.cssDIR}"/>
+        <h:outputScript name="js/highcharts.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/highcharts-3d.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/highcharts-more.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/exporting.js" library="#{uiLayout.webProfile.cssdir}"/>
         <!-- HighChart .js plugin End -->
 
         <!-- BOX START -->
