--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
@@ -6,21 +6,19 @@
                 template="/template/common/template.xhtml">
 
     <f:metadata>
-        <f:viewParam name="advisor" value="#{webutil.uiprofile.advisor}"/>
-        <f:viewParam name="rep" value="#{webutil.uiprofile.rep}"/>
         <f:viewParam name="app" value="#{tcmpb.newapp}"/>
         <f:viewParam name="acct" value="#{tcmpb.beanAcctnum}"/>
         <f:event type="preRenderView" listener="#{tcmpb.portfolioRenderView}"/>
     </f:metadata>
 
     <ui:define name="content">
-        <h:outputScript name="js/invCharts.js" library="#{uiLayout.cssDIR}"/>
+        <h:outputScript name="js/invCharts.js" library="#{uiLayout.webProfile.cssdir}"/>
 
         <!-- HighChart .js plugin Start -->
-        <h:outputScript name="js/highcharts.js" library="#{uiLayout.cssDIR}"/>
-        <h:outputScript name="js/highcharts-3d.js" library="#{uiLayout.cssDIR}"/>
-        <h:outputScript name="js/highcharts-more.js" library="#{uiLayout.cssDIR}"/>
-        <h:outputScript name="js/exporting.js" library="#{uiLayout.cssDIR}"/>
+        <h:outputScript name="js/highcharts.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/highcharts-3d.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/highcharts-more.js" library="#{uiLayout.webProfile.cssdir}"/>
+        <h:outputScript name="js/exporting.js" library="#{uiLayout.webProfile.cssdir}"/>
         <!-- HighChart .js plugin End -->
 
         <!-- BOX START -->
