--- a/Invessence/modules/web/src/main/webapp/signup2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/signup2.xhtml
@@ -21,7 +21,7 @@
 							<p:panel styleClass="SignupBlock2"
 								style="border: 0px; background: transparent;">
 								<div class="Container100 TexAlCenter">
-									<h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+									<h:graphicImage id="logo" name="#{uiLayout.webProfile.logo}"
 										styleClass="" library="invessence" class="MarAuto"
 										style="height: 50px" />
 								</div>
