--- a/Invessence/modules/web/src/main/webapp/signup3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/signup3.xhtml
@@ -13,7 +13,7 @@
 				<div class="Container90 Fnone MarAuto TexAlCenter">
 					<h:form>
 						<div class="Container100 TexAlCenter">
-							<h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+							<h:graphicImage id="logo" name="#{uiLayout.webProfile.logo}"
 								styleClass="" library="invessence" class="MarAuto MarTop20"
 								style="height: 50px" />
 						</div>
@@ -33,7 +33,7 @@
 						<h4 class="FsRes13">
 								If you can't find the confirmation email, please check your
 								spam/junk folder and add <a
-									href="#{webutil.uiprofile.securehomepage}">#{webutil.uiprofile.securehomepage}</a>
+									href="#{webutil.webprofile.securehomepage}">#{webutil.webprofile.securehomepage}</a>
 								as a trusted site.
 							</h4>
 						</div>
