--- a/Invessence/modules/web/src/main/webapp/signup4.xhtml
+++ b/Invessence/modules/web/src/main/webapp/signup4.xhtml
@@ -13,7 +13,7 @@
                     <h:form>
                        
                         <div class="Container100 TexAlCenter">
-							<h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+							<h:graphicImage id="logo" name="#{uiLayout.webProfile.logo}"
 								styleClass="" library="invessence" class="MarAuto MarTop20"
 								style="height: 50px" />
 						</div>
