Checked in 10/01/2017 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/activeAdv.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/activeAdv.xhtml
@@ -49,7 +49,7 @@
                             <p:column styleClass="ListOfAccntsColWidthBtn ZeroPaddingBottom AdvtcmLayoutColumn" 
                             priority="1"
                             resizable="true">
-                          <p:commandButton id="ovButton" rendered="#{managedVar.acctStatus == 'Pending'}"
+                          <p:commandButton id="ovButton" rendered="true"
                                                  styleClass="AdvtcmGridBtnR GreenButton DualBtnModeRight "
                                                  process="@this" immediate="true"
                                                 value="View"
