Checked in 01/06/2017 Ticket 305,306

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/activeAdv.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/activeAdv.xhtml
@@ -77,11 +77,11 @@
                                 <h:outputText styleClass="dashboardUsrColumnFloatRight" value="#{managedVar.fullname}"/>
                             </p:column> 
                             <p:column sortBy="#{managedVar.displayAcct}"
-                                      headerText="Ref. No."
+                                      headerText="Account. No."
                                       priority="5"
                                       styleClass="ListOfAccntsColWidth AdvtcmLayoutColumn"
                                       resizable="true">
-                                <h:outputText styleClass="dashboardUsrColumnFloatRight" value="#{managedVar.displayAcct}"/>
+                                <h:outputText styleClass="dashboardUsrColumnFloatRight" value="#{managedVar.acctnum}"/>
                             </p:column>
 
                             <p:column sortBy="#{managedVar.accttype}"
