--- a/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -70,7 +70,7 @@
                 </div>
                 <div class="Seperator Container100"></div>
                 <div class="Container100">
-                    <a href="/pages/advisor/alist.xhtml?action=A">
+                    <a href="/pages/advisor/activeAdv.xhtml?action=A">
                         <div class="Container50">
                             <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
                                 <div class="ContainerIndent">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="EmptyBox10"></div>
                 <div class="Container100">
-                    <a href="/pages/advisor/alist.xhtml?action=P">
+                    <a href="/pages/advisor/pendingAdv.xhtml?action=P">
                         <div class="Container50">
                             <div class="Wid90 BorderedBox TexAlCenter HoverEffect MarAuto">
                                 <div class="ContainerIndent">
