--- a/Invessence/modules/web/src/main/webapp/pages/advisor/pendingAdv.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/pendingAdv.xhtml
@@ -71,7 +71,7 @@
                             resizable="true">
                        
                             </p:column>-->
-                            <p:column selectionMode="multiple" style="width:16px;text-align:center"/>
+                            <p:column selectionMode="multiple" styleClass="multipleSelectionChkList" style="width:50px;text-align:center"/>
                             <!-- <p:column styleClass="ListOfAccntsColWidthBtn ZeroPaddingBottom" resizable="true">
                                 
                             </p:column> -->
