--- a/Invessence/modules/web/src/main/webapp/demo.xhtml
+++ b/Invessence/modules/web/src/main/webapp/demo.xhtml
@@ -10,25 +10,28 @@
         <div id="layout-portlets-cover">
             <div class="EmptyBox50"></div>
             <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                 style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
+                 style="margin-top:5%; background-position:center; background-size:cover;">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form id="logonForm" prependId="false" styleClass="formPage">
                         <div class="EmptyBox50"></div>
-                        <h:graphicImage id="logo" name="#{uiLayout.logo}" styleClass="Fleft" library="invessence"
-                                        class="MarAuto MarTop20 MarBot10"/>
+                        <h1>Choose Product to Emulate</h1>
                         <div class="EmptyBox20"></div>
                         <div class="EmptyBox20"></div>
-                        <h:commandButton styleClass="Fs16"
-                                         value="Invessence"
-                                         action="#{sessionControl.emulateClient('www.invessence.com')}"/>
+                        <p:commandLink actionListener="#{sessionControl.emulateClient('www.invessence.com')}">
+                            <h:graphicImage name="images/logo/LOGO.png" library="invessence"
+                                            class="MarAuto MarTop5 MarBot5" style="height: 70px"/>
+                        </p:commandLink>
+
                         <div class="EmptyBox10"></div>
-                        <h:commandButton styleClass="Fs16"
-                                         value="Building Benjamins"
-                                         action="#{sessionControl.emulateClient('www.buildingbenjamins.com')}"/>
+                        <p:commandLink actionListener="#{sessionControl.emulateClient('www.buildingbenjamins.com')}">
+                            <h:graphicImage name="images/logo/BuildingBenjamins-identity.png" library="invessence"
+                                            class="MarAuto MarTop5 MarBot5" style="height: 70px"/>
+                        </p:commandLink>
                         <div class="EmptyBox10"></div>
-                        <h:commandButton styleClass="Fs16"
-                                         value="UOB KH"
-                                         action="#{sessionControl.emulateClient('uob.invessence.com:8080')}"/>
+                        <p:commandLink actionListener="#{sessionControl.emulateClient('uob.invessence.com:8080')}">
+                            <h:graphicImage name="images/logo/uobkh.png" library="invessence"
+                                            class="MarAuto MarTop5 MarBot5" style="height: 70px"/>
+                        </p:commandLink>
                         <div class="EmptyBox50"></div>
                     </h:form>
                 </div>
