--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/core0.xhtml
@@ -11,14 +11,17 @@
 
 
             <div class="Wid100 uobCoreLabel">Invest for</div>
-            <p:selectOneMenu id="basket" styleClass="Wid100 uob_selectDropdown"
-                             value="#{uobpb.basket}" >
-                <p:ajax listener="#{uobpb.selectedActionBasket}"
+            <p:selectOneMenu value="#{uobpb.goal}"
+                             styleClass="Wid100 uob_selectDropdown"
+                             required="true" requiredMessage="Please choose investment strategy" >
+                <p:ajax listener="#{uobpb.onGoalChangeValue}"
                         update=":ceForm:workArea, :ceForm:displayInfo, :ceForm:graphArea"/>
-                <f:selectItems value="#{uobpb.advisorBasket.entrySet()}"
-                               var="bskt" itemLabel="#{bskt.value}" itemValue="#{bskt.key}"/>
+                <f:selectItem itemLabel="Choose One" itemValue=""/>
+                <f:selectItem itemLabel="Retirement" itemValue="Retirement"/>
+                <f:selectItem itemLabel="College" itemValue="College"/>
+                <f:selectItem itemLabel="Building Wealth" itemValue="Wealth"/>
+                <f:selectItem itemLabel="Other" itemValue="Other"/>
             </p:selectOneMenu>
-
 
             <div class="Wid100 uobCoreLabel">Your current age</div>
             <p:spinner id="age" value="#{uobpb.age}"
